od html integration

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Study City</title>
+    <title>StudyCity</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <link
@@ -181,7 +181,7 @@
   </head>
   <body>
     <nav>
-      <h1>Study City</h1>
+      <h1>StudyCity</h1>
 
       <div class="btn-group">
         <a href="{% url 'register' %}">Register</a>
@@ -192,7 +192,7 @@
       <div id="map"></div>
       <form method="get" class="form-group my-4">
         <div class="container">
-          <label>Enter the location/Zip Code</label>
+          <label>Enter the location/ZIP Code</label>
           <input
             class="form-control"
             type="text"
