--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -24,6 +24,7 @@
 {#<h2>{{ locationID }}</h2>#}
 <h2>{{ business.phone }}</h2>
 <h2>Rating: {{ business.rating }}</h2>
+<h2>Rating: {{ business.rating }}</h2>
 <img src="{{ business.image_url }}"/>
 <h1>User Reviews:</h1>
 {% for review in reviews %}
