od html integration

--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -24,9 +24,12 @@
 {#<h2>{{ locationID }}</h2>#}
 <h2>{{ business.phone }}</h2>
 <h2>Yelp! rating: {{ business.rating }}</h2>
-<h2>Sanitation grade: {{ sanitation.grade }}</h2>
+<h2>NYC sanitation grade: {{ sanitation.grade }}</h2>
 <h3>Grade date: {{ sanitation.grade_date }}</h3>
-<h2>Local 311 complaints: {{ three_one_one }}</h2>
+<h2>Local 311 complaints:</h2>
+{% for complaint in three_one_one %}
+    <h3>{{complaint.complaint_type}} {{ complaint.created_date }} {{ complaint.description }} {{ complaint.status }}</h3>
+{% endfor %}
 <img src="{{ business.image_url }}"/>
 <h1>User Reviews:</h1>
 {% for review in reviews %}
