--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -1,91 +1,117 @@
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ business.name }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <style>
-      img {
-        max-width: 100%;
-      }
 
-      body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-      .form-section {
-          width: 80%;
-          max-width: 1200px;
-          background-color: aliceblue;
-          padding: 10px;
-      }
-      .review-input {
-        width: 100%;
-        margin: auto;
-        height: 50px;
-        margin-bottom: 20px;
-      }
-      .range {
-          display: flex;
-          flex-direction: row;
-        justify-content: space-between;
-      }
-      
-    </style>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{ business.name }}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <style>
+    img {
+      max-width: 100%;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .form-section {
+      width: 80%;
+      max-width: 1200px;
+      background-color: aliceblue;
+      padding: 10px;
+    }
+
+    .review-input {
+      width: 100%;
+      margin: auto;
+      height: 50px;
+      margin-bottom: 20px;
+    }
+
+    .range {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      width: 100%;
+    }
+
+    .btn-group {
+      gap: 10px;
+    }
+  </style>
 
 
-  </head>
-  <body>
-    <h1>{{ business.name }}</h1>
-   
-    <h2>{{ business.phone }}</h2>
-    <h2>Rating: {{ business.rating }}</h2>
-    <img src="{{ business.image_url }}" />
-    <h1>User Comments</h1>
-    {% for review in reviews %}
-    <h2>
-      {{review.user.username}} reviewed on {{ review.date_posted }} : {{review.review_text }}
-    </h2>
-    {% endfor %}
-    <h1>Add Review</h1>
+</head>
 
-    <form method="post" class="form-section">
-      {% csrf_token %}
-      <input
-        type="text"
-        name="review"
-        placeholder="Your review"
-        class="review-input"
-      />
-      <br/>
-      <div class="range">
-          <p>0</p>
-          <p>1</p>
-          <p>2</p>
-          <p>3</p>
-          <p>4</p>
-          <p>5</p>
-      </div>
-      <label for="comfort_rating" class="form-label">Comfort Rating</label>
-      <input type="range" name="comfort_rating" class="form-range" min="0" max="5" id="comfort_rating">
+<body>
+  <nav>
+    <a href={% url 'index' %}>
+      <h1>Study City</h1>
+    </a>
 
-      <label for="food_rating" class="form-label">Food Rating</label>
+    <div class="btn-group">
+      <a href="{% url 'register' %}">Register</a>
+      <a href="{% url 'login' %}">Login</a>
+    </div>
+  </nav>
+  <h1>{{ business.name }}</h1>
+
+  <h2>{{ business.phone }}</h2>
+  <h2>Rating: {{ business.rating }}</h2>
+  <img src="{{ business.image_url }}" />
+  <h1>User Comments</h1>
+  {% for review in reviews %}
+  <h2>
+    {{review.user.username}} reviewed on {{ review.date_posted }} : {{review.review_text }}
+  </h2>
+  {% endfor %}
+  <h1>Add Review</h1>
+
+  <form method="post" class="form-section">
+    {% csrf_token %}
+    <input type="text" name="review" placeholder="Your review" class="review-input" />
+    <br />
+    <div class="range">
+      <p>0</p>
+      <p>1</p>
+      <p>2</p>
+      <p>3</p>
+      <p>4</p>
+      <p>5</p>
+    </div>
+    <label for="comfort_rating" class="form-label">Comfort Rating</label>
+    <input type="range" name="comfort_rating" class="form-range" min="0" max="5" id="comfort_rating">
+
+    <label for="food_rating" class="form-label">Food Rating</label>
     <input type="range" name="food_rating" class="form-range" min="0" max="5" id="food_rating">
-      <label for="wifi_rating" class="form-label">Wifi Rating</label>
+    <label for="wifi_rating" class="form-label">Wifi Rating</label>
     <input type="range" name="wifi_rating" class="form-range" min="0" max="5" id="wifi_rating">
-      <label for="charging_rating" class="form-label">Charging Rating</label>
+    <label for="charging_rating" class="form-label">Charging Rating</label>
     <input type="range" name="charging_rating" class="form-range" min="0" max="5" id="charging_rating">
     <label for="general_rating" class="form-label">Overall Recommendation</label>
     <input type="range" name="general_rating" class="form-range" min="0" max="5" id="general_rating">
-      <input type="hidden" name="locationid" value={{ locationID }} />
-      <input type="hidden" name="locationname" value={{ business.name }} />
-      <input type="submit" />
-    </form>
-  </body>
+    <input type="hidden" name="locationid" value={{ locationID }} />
+    <input type="hidden" name="locationname" value={{ business.name }} />
+    <input type="submit" />
+  </form>
+</body>
+
 </html>
