--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -341,6 +341,15 @@
                       <i class="fas fa-dollar-sign dollar pointer mr-2" id="price2" onclick="selectDollar(2)"></i>
                       <i class="fas fa-dollar-sign dollar pointer mr-2" id="price3" onclick="selectDollar(3)"></i>
                     </div>
+
+                    <div class="my-4">
+                      <input type="hidden" class="form-control my-4" id="priceInput" name="price"
+                        value="{{ params.price }}" />
+                      <i class="fas fa-dollar-sign dollar pointer mr-2" id="price1" onclick="selectDollar(1)"></i>
+                      <i class="fas fa-dollar-sign dollar pointer mr-2" id="price2" onclick="selectDollar(2)"></i>
+                      <i class="fas fa-dollar-sign dollar pointer mr-2" id="price3" onclick="selectDollar(3)"></i>
+                    </div>
+                    
                     <input type="submit" class="btn btn-primary" value="Find me Study Spaces!" />
                   </div>
                 </div>
