--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -108,7 +108,7 @@
       
     };
 
-
+   
   </script>
   <style>
     #map {
@@ -359,6 +359,16 @@
                       <span style="font-size: x-large; font-weight: bold;" class="mr-2" id="gradeA" onclick="selectGrade('A')">A</span>
                       <span style="font-size: x-large; font-weight: bold;"class=" mr-2" id="gradeB" onclick="selectGrade('B')">B</span>
                       <span style="font-size: x-large; font-weight: bold;"class="mr-2" id="gradeC" onclick="selectGrade('C')">C</span>
+                    </div>
+
+                    <div class="form-check 311-switch my-4">
+                      <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
+                        checked={{
+                          params.311_check
+                          }}
+                        />
+                        <label
+                          class=" form-check-label" for="flexSwitchCheckChecked">311 Complains Check</label>
                     </div>
 
                     
