removing endcomment tag in index.html

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -362,7 +362,7 @@
                           params.311_check
                           }} />
                       <label class=" form-check-label" for="flexSwitchCheckChecked">311 Complains Check</label>
-                    </div> {% endcomment %}
+                    </div>
 
                     <input type="submit" class="btn btn-primary" value="Find me Study Spaces!" />
                   </div>
