--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -351,18 +351,18 @@
                       <i class="fas fa-star pointer" id="comfort5" onclick="selectComfort(5)"></i>
                     </div>
 
-                    <div class="form-check 311-switch my-4">
+                    <!-- <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"/>
                         <label class=" form-check-label" for="flexSwitchCheckChecked">No 311 Complaints</label>
-                    </div>
+                    </div> -->
 
-                    <div class="form-check 311-switch my-4">
+                    <!-- <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
                         checked={{
                           params.311_check
                           }} />
                       <label class=" form-check-label" for="flexSwitchCheckChecked">311 Complains Check</label>
-                    </div>
+                    </div> -->
 
                     <input type="submit" class="btn btn-primary" value="Find me Study Spaces!" />
                   </div>
