--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -100,7 +100,7 @@
     <h3>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }} {{ complaint.status }}</h3>
 {% endfor %}
 <img src="{{ business.image_url }}"/>
-<h1>User Reviews:</h1>
+<h1>Overall {{ reviews|length }} User Reviews:</h1>
 {% for review in reviews %}
     <h2>{{ review.user.username }} reviewed on {{ review.date_posted }} : {{ review.review_text }}</h2>
 {% endfor %}
@@ -117,16 +117,16 @@
         <p>4</p>
         <p>5</p>
     </div>
-    <label for="comfort_rating" class="form-label">Comfort Rating</label>
+    <label for="comfort_rating" class="form-label">Comfort Rating(Average: {{ avg_dict.comfort_rating__avg }} )</label>
     <input type="range" name="comfort_rating" class="form-range" min="0" max="5" id="comfort_rating">
 
-    <label for="food_rating" class="form-label">Food Rating</label>
+    <label for="food_rating" class="form-label">Food Rating(Average: {{ avg_dict.food_rating__avg }} )</label>
     <input type="range" name="food_rating" class="form-range" min="0" max="5" id="food_rating">
-    <label for="wifi_rating" class="form-label">Wifi Rating</label>
+    <label for="wifi_rating" class="form-label">Wifi Rating(Average: {{ avg_dict.wifi_rating__avg }} )</label>
     <input type="range" name="wifi_rating" class="form-range" min="0" max="5" id="wifi_rating">
-    <label for="charging_rating" class="form-label">Charging Rating</label>
+    <label for="charging_rating" class="form-label">Charging Rating(Average: {{ avg_dict.charging_rating__avg }} )</label>
     <input type="range" name="charging_rating" class="form-range" min="0" max="5" id="charging_rating">
-    <label for="general_rating" class="form-label">Overall Recommendation</label>
+    <label for="general_rating" class="form-label">Overall Recommendation(Average: {{ avg_dict.general_rating__avg }} )</label>
     <input type="range" name="general_rating" class="form-range" min="0" max="5" id="general_rating">
     <input type="hidden" name="locationid" value="{{ locationID }}"/>
     <input type="hidden" name="locationname" value="{{ business.name }}"/>
