--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -233,8 +233,17 @@
     <h1>Study City</h1>
 
     <div class="btn-group">
+      
+      {% if user.is_authenticated %}
+      <a href="{% url 'profile' %}">Profile</a>
+      <a href="{% url 'logout' %}">Logout</a>
+      
+      {% else %}
       <a href="{% url 'register' %}">Register</a>
       <a href="{% url 'login' %}">Login</a>
+      {% endif %}
+      
+     
     </div>
   </nav>
   <div class="main">
