--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,6 +2,37 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <style>
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+      }
+      </style>
+</head>
+
+<body>
+    <nav>
+        <h1>Study City</h1>
+    
+        <div class="btn-group">
+          
+          {% if user.is_authenticated %}
+          <a href="{% url 'index' %}">Search</a>
+          <a href="{% url 'user' %}">Exit Profile</a>
+          <a href="{% url 'logout' %}">Logout</a>
+          
+          {% else %}
+          <a href="{% url 'register' %}">Register</a>
+          <a href="{% url 'login' %}">Login</a>
+          {% endif %}
+          
+         
+        </div>
+    </nav>
 <div class="content-section">
     <div class="media">
         <img class="rounded-circle account-img" height="200" width="200" src="{{ user.profile.image.url }}">
@@ -40,7 +71,9 @@
             <button class="btn btn-outline-info" type="submit">Save Changes</button>
         </div>
         </form>
-        <span><a href="{% url 'user' %}">Exit Profile</a></span>
-        <span><a href="{% url 'index' %}">Search</a></span>
+        <!-- <span><a href="{% url 'user' %}">Exit Profile</a></span>
+        <span><a href="{% url 'index' %}">Search</a></span> -->
     </div>
+
+</body>
 </html>
