--- a/accounts/templates/accounts/user.html
+++ b/accounts/templates/accounts/user.html
@@ -1,4 +1,33 @@
-<h1>Hello, {{request.user}}. Welcome to StudyCity.</h1>
-<span><a href="{% url 'profile' %}">Profile</a></span>
-<span><a href="{% url 'logout' %}">Logout</a></span>
-<span><a href="{% url 'index' %}">Search</a></span>
+<head>
+    <style>
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+      }
+      </style>
+</head>
+
+<body>
+    <nav>
+        <div class="btn-group">
+
+        <h2>Hello, {{request.user}}. Welcome to StudyCity.</h2>
+          
+          {% if user.is_authenticated %}
+          <a href="{% url 'index' %}">Search</a>
+          <a href="{% url 'profile' %}">Profile</a>
+          <a href="{% url 'logout' %}">Logout</a>
+          
+          {% else %}
+          <a href="{% url 'register' %}">Register</a>
+          <a href="{% url 'login' %}">Login</a>
+          {% endif %}
+          
+         
+        </div>
+    </nav>
+
+</body>
