--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -83,11 +83,18 @@
     <a href={% url 'index' %}>
         <h1>Study City</h1>
     </a>
+    <div>
+    {% if user.is_authenticated %}
+      <a href="{% url 'profile' %}">Profile</a>
+      <a href="{% url 'logout' %}">Logout</a>
+      
+      {% else %}
+      <a href="{% url 'register' %}">Register</a>
+      <a href="{% url 'login' %}">Login</a>
+      {% endif %}
 
-    <div class="btn-group">
-        <a href="{% url 'register' %}">Register</a>
-        <a href="{% url 'login' %}">Login</a>
     </div>
+      
 </nav>
 
 <h1>{{ business.name }}</h1>
