--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,8 +1,15 @@
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
 
-<head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
     <style>
     nav {
         display: flex;
@@ -11,6 +18,10 @@
         align-items: center;
         padding: 10px 20px;
       }
+
+      .btn-group {
+      gap: 10px;
+    }
       </style>
 </head>
 
@@ -21,6 +32,7 @@
         <div class="btn-group">
           
           {% if user.is_authenticated %}
+          {{request.user}} <i class="fas fa-user"></i>
           <a href="{% url 'index' %}">Search</a>
           <a href="{% url 'user' %}">Exit Profile</a>
           <a href="{% url 'logout' %}">Logout</a>
@@ -33,6 +45,9 @@
          
         </div>
     </nav>
+
+ 
+
 <div class="content-section">
     <div class="media">
         <img class="rounded-circle account-img" height="200" width="200" src="{{ user.profile.image.url }}">
