--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -7,6 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{{ business.name }}</title>
+    <!--  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
+
+<!--  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -36,8 +44,8 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"> -->
-    </script>
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script> -->
     <style>
         img {
             max-width: 100%;
@@ -82,7 +90,10 @@
         .btn-group {
         gap: 10px;
         }
-
+        img {  
+        max-width: 100%;  
+        height: 500px;  
+    }
         
     </style>
 
@@ -106,24 +117,40 @@
         {% endif %}
         <a href={% url 'index' %}>Search</a>
     </div>
+
+   
       
 </nav>
 
-<h1>{{ business.name }}</h1>
-<h2>{{ business.phone }}</h2>
-<h2>Yelp! rating: {{ business.rating }}</h2>
-<h2>NYC sanitation grade: {{ sanitation.grade }}</h2>
-<h3>Grade date: {{ sanitation.grade_date }}</h3>
-<h2>Local 311 complaints: </h2>
-{% for complaint in three_one_one %}
-    <h3>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }} {{ complaint.status }}</h3>
-{% endfor %}
+
+<!-- -------------------------------------------------------------- -->
+<div>
+    <div>
+    <h1>{{ business.name }}</h1>
+    </div>
+    <div>
+    <h2>{{ business.phone }}</h2>
+    </div>
+    <h2>Yelp! rating: {{ business.rating }}</h2>
+    <h2>NYC sanitation grade: {{ sanitation.grade }}</h2>
+    <h3>Grade date: {{ sanitation.grade_date }}</h3>
+    <h2>Local 311 complaints: </h2>
+    {% for complaint in three_one_one %}
+        <h3>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }} {{ complaint.status }}</h3>
+    {% endfor %}
+
+</div>
+
+
+
 <img src="{{ business.image_url }}"/>
-<h1>Overall {{ reviews|length }} User Reviews:</h1>
+<h3>Overall {{ reviews|length }} User Reviews:</h3>
 {% for review in reviews %}
     <h2>{{ review.user.username }} reviewed on {{ review.date_posted }} : {{ review.review_text }}</h2>
 {% endfor %}
-<h1>Post your review</h1>
+<h3>Post your review</h3>
+
+<div>
 <form method="post">
     {% csrf_token %}
     <input type="text" name="review" placeholder="Your review" class="review-input"/>
@@ -136,21 +163,47 @@
         <p>4</p>
         <p>5</p>
     </div>
+    
+    <div>
     <label for="comfort_rating" class="form-label">Comfort Rating(Average: {{ avg_dict.comfort_rating__avg }} )</label>
     <input type="range" name="comfort_rating" class="form-range" min="0" max="5" id="comfort_rating">
-
+    </div>
+    <div>
     <label for="food_rating" class="form-label">Food Rating(Average: {{ avg_dict.food_rating__avg }} )</label>
     <input type="range" name="food_rating" class="form-range" min="0" max="5" id="food_rating">
+    </div>
+    <div>
     <label for="wifi_rating" class="form-label">Wifi Rating(Average: {{ avg_dict.wifi_rating__avg }} )</label>
     <input type="range" name="wifi_rating" class="form-range" min="0" max="5" id="wifi_rating">
+    </div>
+    <div>
     <label for="charging_rating" class="form-label">Charging Rating(Average: {{ avg_dict.charging_rating__avg }} )</label>
     <input type="range" name="charging_rating" class="form-range" min="0" max="5" id="charging_rating">
+    </div>
+    <div>
     <label for="general_rating" class="form-label">Overall Recommendation(Average: {{ avg_dict.general_rating__avg }} )</label>
     <input type="range" name="general_rating" class="form-range" min="0" max="5" id="general_rating">
+    </div>
     <input type="hidden" name="locationid" value="{{ locationID }}"/>
     <input type="hidden" name="locationname" value="{{ business.name }}"/>
     <input type="submit"/>
+
+    <!-- <p>Audio settings:</p>
+
+<div>
+  <input type="range" id="volume" name="volume"
+         min="0" max="11">
+  <label for="volume">Volume</label>
+</div>
+
+<div>
+  <input type="range" id="cowbell" name="cowbell" 
+         min="0" max="100" value="90" step="10">
+  <label for="cowbell">Cowbell</label>
+</div> -->
+
 </form>
+</div>
 </body>
 
 </html>
