--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -94,6 +94,33 @@
         max-width: 100%;  
         height: 500px;  
     }
+
+    /* .features {
+        margin: 4em auto;
+        padding: 1em;
+        position: relative;
+    }
+    .feature-title {
+        color: #333;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+    }
+    .features img {
+        -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+        -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+        margin-bottom: 16px;
+    } */
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+}
         
     </style>
 
@@ -122,9 +149,96 @@
       
 </nav>
 
+<!-- <div class="container features"> -->
+    <div class="row">
+        <!-- <div class="col-lg-4 col-md-4 col-sm-12"> -->
+        <div class="column">
+            <h2 class="feature-title" style="font-weight: bold;">{{ business.name }}</h2>
+            <!-- <img src="images/column-1.jpg" class="img-fluid"> -->
+            <img src="{{ business.image_url }}"/> 
+            <p>
+                <div>
+                    <h3>Contact Details: {{ business.phone }}</h3>
+                
+                    <h3>Yelp! rating: {{ business.rating }}</h3>
+                    <h3>NYC sanitation grade: {{ sanitation.grade }}</h3>
+                    <h3>Grade date: {{ sanitation.grade_date }}</h3>
+                    <h3>Local 311 complaints: </h3>
+                    {% for complaint in three_one_one %}
+                    <h3>{{ complaint.complaint_type }} {{ complaint.created_date }} {{ complaint.description }} 
+                        {{ complaint.status }}</h3>
+                    {% endfor %}
+                    <!-- <img src="{{ business.image_url }}"/>        -->
+            
+                </div>
+            </p>
+        </div>    
+    
+    <!-- <div class="row"> -->
+        <div class="column">
+            <h2 class="feature-title" style="font-weight: bold;">Ratings and Reviews </h2>
+            <!-- <img src="images/column-2.jpg" class="img-fluid"> -->
+         <p>
+                <h3>Overall {{ reviews|length }} User Reviews:</h3>
+                {% for review in reviews %}
+                <h3>{{ review.user.username }} reviewed on {{ review.date_posted }} : {{ review.review_text }}</h3>
+                {% endfor %}
+                <h3>Post your review</h3>
 
+            <div>
+                <form method="post">
+                    {% csrf_token %}
+                    <input type="text" name="review" placeholder="Your review" class="review-input"/>
+                    <br/>
+                    <div class="range">
+                        <p>0</p>
+                        <p>1</p>
+                        <p>2</p>
+                        <p>3</p>
+                        <p>4</p>
+                        <p>5</p>
+                    </div>
+        
+                    <div>
+                    <label for="comfort_rating" class="form-label">Comfort Rating(Average: {{ avg_dict.comfort_rating__avg }} )</label>
+                    <input type="range" name="comfort_rating" class="form-range" min="0" max="5" id="comfort_rating">
+                    </div>
+
+                    <div>
+                    <label for="food_rating" class="form-label">Food Rating(Average: {{ avg_dict.food_rating__avg }} )</label>
+                    <input type="range" name="food_rating" class="form-range" min="0" max="5" id="food_rating">
+                    </div>
+
+                    <div>
+                    <label for="wifi_rating" class="form-label">Wifi Rating(Average: {{ avg_dict.wifi_rating__avg }} )</label>
+                    <input type="range" name="wifi_rating" class="form-range" min="0" max="5" id="wifi_rating">
+                    </div>
+
+                    <div>
+                    <label for="charging_rating" class="form-label">Charging Rating(Average: {{ avg_dict.charging_rating__avg }} )</label>
+                    <input type="range" name="charging_rating" class="form-range" min="0" max="5" id="charging_rating">
+                    </div>
+
+                    <div>
+                    <label for="general_rating" class="form-label">Overall Recommendation(Average: {{ avg_dict.general_rating__avg }} )</label>
+                    <input type="range" name="general_rating" class="form-range" min="0" max="5" id="general_rating">
+                    </div>
+
+                    <input type="hidden" name="locationid" value="{{ locationID }}"/>
+                    <input type="hidden" name="locationname" value="{{ business.name }}"/>
+                    <input type="submit"/>
+                </form>
+            </div>
+    </p>
+    </div>
+        
+        <!-- <div class="col-lg-4 col-md-4 col-sm-12">
+        
+        </div> -->
+</div>
+<!-- </div> -->
 <!-- -------------------------------------------------------------- -->
-<div>
+<!-- <div>
     <div>
     <h1>{{ business.name }}</h1>
     </div>
@@ -186,7 +300,7 @@
     </div>
     <input type="hidden" name="locationid" value="{{ locationID }}"/>
     <input type="hidden" name="locationname" value="{{ business.name }}"/>
-    <input type="submit"/>
+    <input type="submit"/> -->
 
     <!-- <p>Audio settings:</p>
 
@@ -202,8 +316,8 @@
   <label for="cowbell">Cowbell</label>
 </div> -->
 
-</form>
-</div>
+<!-- </form> -->
+<!-- </div> -->
 </body>
 
 </html>
