fixed wifi filter bug

--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -160,7 +160,7 @@
         $(`#wifi${index}`).css("color", "gold");
         $("#wifiInput").val(wifi);
       }
-      for (let index = food + 1; index <= 5; index++) {
+      for (let index = wifi + 1; index <= 5; index++) {
         $(`#wifi${index}`).css("color", "black");
       }
     };
