changed navbar background color

--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -96,7 +96,7 @@
                         </div>
 
 
-                        <div class="text-center w-75 mx-auto mt-5">
+                        <div class="text-center w-75 mx-auto mt-5 mb-3">
                             <h2 class="feature-title" style="font-weight: bold;">Ratings and Reviews </h2>
 
 
