--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -174,7 +174,6 @@
         $(`#charging${index}`).css("color", "black");
       }
     };
-
   </script>
 
   <style>
@@ -201,6 +200,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px 20px;
+      background-color: #f5f5f5;
     }
 
     .btn-group {
@@ -274,22 +274,22 @@
     <h1>StudyCity</h1>
 
     <div class="btn-group">
-      
+
       {% if user.is_authenticated %}
       {{request.user}} <i class="fas fa-user"></i>
       <a href="{% url 'profile' %}">Profile</a>
       <a href="{% url 'logout' %}">Logout</a>
-      
+
       {% else %}
       <a href="{% url 'register' %}">Register</a>
       <a href="{% url 'login' %}">Login</a>
       {% endif %}
-      
-     
+
+
     </div>
   </nav>
 
- 
+
 
   <div class="main">
     <div id="map"></div>
@@ -353,7 +353,7 @@
             {% endfor %}
           </div>
         </div>
-        
+
 
         <!-- recommended results -->
         {% if recommendations %}
@@ -452,7 +452,7 @@
                       <i class="fas fa-star pointer" id="food3" onclick="selectFood(3)"></i>
                       <i class="fas fa-star pointer" id="food4" onclick="selectFood(4)"></i>
                       <i class="fas fa-star pointer" id="food5" onclick="selectFood(5)"></i>
-                    </div>                   
+                    </div>
 
                     <div class="my-4">
                       <h4>WiFi</h4>
@@ -463,7 +463,7 @@
                       <i class="fas fa-wifi" id="wifi3" onclick="selectWifi(3)"></i>
                       <i class="fas fa-wifi" id="wifi4" onclick="selectWifi(4)"></i>
                       <i class="fas fa-wifi" id="wifi5" onclick="selectWifi(5)"></i>
-                    </div> 
+                    </div>
 
                     <div class="my-4">
                       <h4>Charging</h4>
@@ -474,7 +474,7 @@
                       <i class="fas fa-plug" id="charging3" onclick="selectCharging(3)"></i>
                       <i class="fas fa-plug" id="charging4" onclick="selectCharging(4)"></i>
                       <i class="fas fa-plug" id="charging5" onclick="selectCharging(5)"></i>
-                    </div>                        
+                    </div>
 
                     <!-- <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"/>
