added claim business button

--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -73,6 +73,12 @@
                     <input type="submit" class="btn btn-primary m-auto" value="Add to favorite list" />
                     {% endif %}
                 </form>
+                {%if is_business %}
+                <div class="mt-2">
+                    <a href="https://forms.gle/AgdyCzyWNXJPLrN56">Claim this place</a>
+                </div>
+                {% endif %}
+
                 <div>
                     <div class="row mt-5">
                         <div class="column mx-auto ">
