--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -215,6 +215,15 @@
       flex-direction: row;
     }
 
+    .logo a {
+      color: #000000;
+      text-decoration: none;
+    }
+    .logo:hover {
+      color: #000000;
+      text-decoration: none;
+
+    }
     .container {
       width: 50vw;
       flex: 1;
@@ -271,7 +280,7 @@
 
 <body>
   <nav>
-    <h1>StudyCity</h1>
+    <div class="logo"><a href="{% url 'index' %}" text><h1>StudyCity</h1></a> </div>
 
     <div class="btn-group">
 
@@ -295,7 +304,6 @@
     <div id="map"></div>
     <form method="get" class="form-group my-4">
       <div class="container">
-        <label>Enter the location/Zip Code</label>
         <input id="locationInput" class="form-control" type="text" name="place"
           placeholder="Enter the location / zip code" value="{% if params.location %}{{params.location}}{% endif %}" />
         <div class="form-check">
@@ -476,18 +484,10 @@
                       <i class="fas fa-plug" id="charging5" onclick="selectCharging(5)"></i>
                     </div>
 
-                    <!-- <div class="form-check 311-switch my-4">
-                      <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"/>
-                        <label class=" form-check-label" for="flexSwitchCheckChecked">No 311 Complaints</label>
-                    </div> -->
-
-                    <!-- <div class="form-check 311-switch my-4">
-                      <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
-                        checked={{
-                          params.311_check
-                          }} />
-                      <label class=" form-check-label" for="flexSwitchCheckChecked">311 Complains Check</label>
-                    </div> -->
+                    {% comment %} <div class = "form-check 311-switch my-4">
+                      <input name ="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheck"/>
+                      <label for="311_check">311 Noise Complaints</label>
+                    </div>  {% endcomment %}
 
                     <input type="submit" class="btn btn-primary" value="Find me Study Spaces!" />
                   </div>
