--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -304,7 +304,7 @@
     <form method="get" class="form-group my-4">
       <div class="container">
         <input id="locationInput" class="form-control" type="text" name="place"
-          placeholder="Enter the location / zip code" value="{% if params.location %}{{params.location}}{% endif %}" />
+          placeholder="{% if invalid_search %}Please enter a valid New York City location 🗽♥️{% else %}Enter the location / zip code{% endif %}" value="{% if params.location and not invalid_search %}{{params.location}}{% else %}{% endif %}" />
         <div class="form-check">
           <input name="useCurrentLocation" class="form-check-input" type="checkbox" value="" id="useCurrentLocation"
             onclick="toggleCurrentLocation()">
@@ -330,9 +330,7 @@
 
         <!-- filtered results -->
         <div class="my-4 container">
-          {% if invalid_search %}
-          <h4>Please enter a valid New York City location :)</h4>
-          {% elif businesses %}
+          {% if businesses %}
           <h4>Your Study Locations:</h4>
           {% endif %}
           <div class="row">
